add structure of page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,81 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
     <link type="text/css" rel="stylesheet" href="css/main.css"/>
     <meta charset="UTF-8">
     <title>Gustav Klimt</title>
 </head>
+
 <body>
-    <div>
-        <h3>Gustav Klimt</h3>
+    <div class="header">
+        <h2>Gustav Klimt</h2>
+        <img src="http://uploads0.wikiart.org/images/gustav-klimt.jpg!Portrait.jpg"/>
+        <p><em>"I can paint and draw. I believe this myself and a few other people say that they believe this too.
+            But I'm not certain of whether it's true." /Gustav Klimt/</em></p>
     </div>
+
+    <div class="container">
+        <div id="gk01.jpg"></div>
+    </div>
+
+    <div class="container-text">
+        <h3>Gustav Klimt</h3>
+        <p>Gustav Klimt (July 14, 1862 – February 6, 1918) was an Austrian symbolist painter and one of the most
+            prominent members of the Vienna Secession movement. Klimt is noted for his paintings, murals, sketches,
+            and other objets d'art. Klimt's primary subject was the female body, and his works are marked
+            by a frank eroticism. In addition to his figurative works, which include allegories and portraits,
+            he painted landscapes. Among the artists of the Vienna Secession, Klimt was the most influenced
+            by Japanese art and its methods.
+        </p>
+        <p>Early in his artistic career he was a successful painter of architectural decorations in a conventional
+            manner. As he developed a more personal style, his work was the subject of controversy that culminated
+            when the paintings he completed around 1900 for the ceiling of the Great Hall of the University of Vienna
+            were criticized as pornographic. He subsequently accepted no more public commissions, but achieved a new
+            success with the paintings of his 'golden phase', many of which include gold leaf. Klimt's work was an
+            important influence on his younger contemporary Egon Schiele.
+        </p>
+
+    </div>
+
+    <div class="container">
+        <div id="gk02.jpg"></div>
+    </div>
+
+    <div class="container-text">
+        <p>In 1894, Klimt was commissioned to create three paintings to decorate the ceiling of the Great Hall
+            of the University of Vienna. Not completed until the turn of the century, his three paintings,
+            Philosophy, Medicine, and Jurisprudence were criticized for their radical themes and material,
+            and were called "pornographic". Klimt had transformed traditional allegory and symbolism into a new
+            language that was more overtly sexual and hence more disturbing to some. The public outcry came from
+            all quarters—political, aesthetic and religious. As a result, the paintings (seen in gallery below)
+            were not displayed on the ceiling of the Great Hall. This would be the last public commission accepted
+            by the artist.
+           All three paintings were destroyed by retreating SS forces in May 1945.
+        </p>
+        <p>The only folio set produced in Klimt's lifetime, Das Werk Gustav Klimts, was published initially by
+            H. O. Miethke (of Gallerie Miethke, Klimt's exclusive gallery in Vienna) from 1908 to 1914 in an edition
+            of 300, supervised personally by the artist. Fifty images depicting Klimt's most important paintings
+            (1893–1913) were reproduced using collotype lithography and mounted on a heavy, cream-colored wove paper
+            with deckled edges.
+        </p>
+        <p>Each of the fifty prints was categorized among five themes:
+        </p>
+        <ul>
+            <li>Allegorical (which included multicolored prints of The Golden Knight,
+                1903 and The Virgin, c. 1912)</li>
+            <li>Erotic-Symbolist (Water Serpents I and II, both c. 1907–08 and The Kiss, c. 1908)</li>
+            <li>Landscapes (Farm Garden with Sunflowers, c. 1912)</li>
+            <li>Mythical or Biblical (Pallas Athena, 1898; Judith and The Head of Holofernes, 1901;
+                and Danaë, c. 1908)</li>
+            <li>Portraits (Emilie Flöge, 1902)</li>
+        </ul>
+    </div>
+
+    <div>
+        <h4>List of references:</h4>
+        <a href="http://en.wikipedia.org/wiki/Gustav_Klimt">Wikipedia</a>
+    </div>
+
 </body>
 </html>
