--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head lang="en">
     <link type="text/css" rel="stylesheet" href="css/main.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <meta charset="UTF-8">
     <title>Gustav Klimt</title>
 </head>
@@ -10,13 +11,13 @@
 <body>
     <div class="header">
         <h2>Gustav Klimt</h2>
-        <img src="http://uploads0.wikiart.org/images/gustav-klimt.jpg!Portrait.jpg"/>
-        <p><em>"I can paint and draw. I believe this myself and a few other people say that they believe this too.
+        <img class="profile" src="http://uploads0.wikiart.org/images/gustav-klimt.jpg!Portrait.jpg"/>
+        <p class="quote"><em>"I can paint and draw. I believe this myself and a few other people say that they believe this too.
             But I'm not certain of whether it's true." /Gustav Klimt/</em></p>
     </div>
 
     <div class="container">
-        <div id="gk01.jpg"></div>
+        <div id="gk01"></div>
     </div>
 
     <div class="container-text">
@@ -39,7 +40,7 @@
     </div>
 
     <div class="container">
-        <div id="gk02.jpg"></div>
+        <div id="gk02"></div>
     </div>
 
     <div class="container-text">
@@ -72,9 +73,9 @@
         </ul>
     </div>
 
-    <div>
+    <div class="footer">
         <h4>List of references:</h4>
-        <a href="http://en.wikipedia.org/wiki/Gustav_Klimt">Wikipedia</a>
+        <a class="link" href="http://en.wikipedia.org/wiki/Gustav_Klimt">Wikipedia</a>
     </div>
 
 </body>
