--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head lang="en">
     <link type="text/css" rel="stylesheet" href="css/main.css"/>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <script src="js/app.js"></script>
     <meta charset="UTF-8">
     <title>Gustav Klimt</title>
 </head>
